--- a/TP-7-LABO/src/Vistas/ViewInscripcion.form
+++ b/TP-7-LABO/src/Vistas/ViewInscripcion.form
@@ -28,7 +28,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jComboBox1" pref="217" max="32767" attributes="0"/>
-                  <Component id="jComboBox2" max="32767" attributes="0"/>
+                  <Component id="jbxAlumno" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
           </Group>
@@ -51,7 +51,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbxAlumno" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="206" max="32767" attributes="0"/>
           </Group>
@@ -82,7 +82,7 @@
         <Property name="text" type="java.lang.String" value="ELIJA UN ALUMNO:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox2">
+    <Component class="javax.swing.JComboBox" name="jbxAlumno">
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
